...
                                            <action selector="editingDidEndEchoTextField:" destination="BYZ-38-t0r" eventType="editingDidEnd" id="SP4-sT-xIV"/>
                                        </connections>
                                    </textField>
                                    <textView clipsSubviews="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" editable="NO" text="Echo responses" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Lia-ct-AF5" userLabel="Echo Response TextView">
                                        <rect key="frame" x="0.0" y="46" width="343" height="269"/>
                                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <accessibility key="accessibilityConfiguration" identifier="echoResponseTextView"/>
                                        <fontDescription key="fontDescription" name="Courier" family="Courier" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                        <connections>
                                            <outlet property="delegate" destination="BYZ-38-t0r" id="P5J-2t-dCv"/>
                                        </connections>
                                    </textView>
...
                                        <subviews>
                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Dn5-I7-qNG" userLabel="Button View">
                                                <rect key="frame" x="91" y="0.0" width="161" height="30"/>
                                                <subviews>
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9Q1-RG-6EH">
                                                        <rect key="frame" x="0.0" y="0.0" width="44" height="30"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="messageTypeButton"/>
                                                        <state key="normal" title="Binary"/>
                                                        <connections>
                                                            <action selector="didPressMessageTypeButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="K1F-c7-375"/>
                                                        </connections>
                                                    </button>
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ol1-KF-e1z">
                                                        <rect key="frame" x="60" y="0.0" width="49" height="30"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="repeatButton"/>
                                                        <state key="normal" title="Repeat"/>
                                                        <connections>
                                                            <action selector="didPressRepeatButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="VdL-sT-Uz3"/>
                                                        </connections>
                                                    </button>
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aaK-fZ-8Eb">
                                                        <rect key="frame" x="125" y="0.0" width="36" height="30"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="sendButton"/>
                                                        <state key="normal" title="Send"/>
                                                        <connections>
                                                            <action selector="didPressSendButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="WQh-WR-YzH"/>
                                                        </connections>
                                                    </button>
                                                </subviews>
...
